--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://waleedhamza.github.io/Memory-Game/",
+  "homepage": "https://waleedhamza.github.io/Memory-Game",
   "name": "memory-game",
   "version": "0.1.0",
   "private": true,
