--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "npm": "^6.2.0",
+    "npm": "^6.14.17",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^5.0.1"
   },
+  "homepage": "https://WaleedHamza.github.io/Memory-Game/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
